--- a/views/templates/footer.html
+++ b/views/templates/footer.html
@@ -1,26 +1,31 @@
+<script src="js/main.js"></script>
+<script src="js/users/loginUser.js"></script>
+<script src="js/users/signup.js"></script>
+<script src="vendor/js/angular-chat.js"></script>
+<script src="vendor/js/rltm.js"></script>
+
+
+
+<!-- BOOTSTRAP -->
+<script src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js'></script>
+
 <!-- Nav bar -->
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
-<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
 <script src="js/home/index.js"></script>
 
+<!-- socket.io -->
+<script src="/socket.io/socket.io.js"></script>
+<script src="js/worldchat/chat.js"></script>
 
 <!-- Clock -->
-<script src='https://cdnjs.cloudflare.com/ajax/libs/velocity/1.4.1/velocity.js'></script>
+
 <script src="js/home/clock.js"></script>
 
 <!-- Alert -->
 <script src="js/home/alert.js"></script>
 
-<!-- socket.io -->
-<script src="/socket.io/socket.io.js"></script>
 
 
-<!-- AngularJS -->
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-<script src="js/users/loginUser.js"></script>
-<script src="js/users/signup.js"></script>
-<script src="js/worldchat/chat.js"></script>
+
 
 
 </body>
