--- a/views/users/signup.html
+++ b/views/users/signup.html
@@ -6,8 +6,8 @@
         <input type="text" class="form-control" name="mail" id="mail" placeholder="Entrer votre email" ng-model="mail">
     </div>
     <div class="form-group">
-        <label for="speudo">Speudo</label>
-        <input type="text" class="form-control" name="speudo" id="speudo" placeholder="Entrer votre speudo" ng-model="username">
+        <label for="pseudo">Pseudo</label>
+        <input type="text" class="form-control" name="pseudo" id="pseudo" placeholder="Entrer votre pseudo" ng-model="username">
     </div>
     <div class="form-group">
         <label for="pass">Mot de passe</label>
