--- a/public/css/worldchat.css
+++ b/public/css/worldchat.css
@@ -1,194 +1,143 @@
-/* Fix user-agent */
+/* * { margin: 0; padding: 0; box-sizing: border-box; }
+      body { font: 13px Helvetica, Arial; }
+      form { background: rgb(0, 0, 0); padding: 3px; position: fixed; bottom: 0; width: 100%; }
+      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
+      form button { width: 9%; background: rgb(32, 146, 25); border: none; padding: 10px; }
+      #messages { list-style-type: none; margin: 0; padding: 0; }
+      #messages li { padding: 5px 10px; }
+      #messages li:nth-child(odd) { background: rgb(0, 0, 0); }
+      #messages { margin-bottom: 40px }
+      button, input, optgroup, select, textarea {
+        margin: 0;
+        font: inherit;
+        color: black;
+    } */
+    .worldchat{
+        color: black;
+        margin-left: 3rem;
+    }
 
-* {
-    box-sizing: border-box;
-}
-
-html {
-    font-weight: 300;
-    -webkit-font-smoothing: antialiased;
-}
-
-html,
-input {
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-}
-
-html,
-body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-ul {
-    list-style: none;
-    word-wrap: break-word;
-}
-
-
-/* Pages */
-
-.pages {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-}
-
-.page {
-    height: 100%;
-    position: absolute;
-    width: 100%;
-}
-
-
-/* Login Page */
-
-.login.page {
-    background-color: #000;
-}
-
-.login.page .form {
-    height: 100px;
-    margin-top: -100px;
-    position: absolute;
-    text-align: center;
-    top: 50%;
-    width: 100%;
-}
-
-.login.page .form .usernameInput {
-    background-color: transparent;
-    border: none;
-    border-bottom: 2px solid #fff;
-    outline: none;
-    padding-bottom: 15px;
-    text-align: center;
-    width: 400px;
-}
-
-.login.page .title {
-    font-size: 200%;
-}
-
-.login.page .usernameInput {
-    font-size: 200%;
-    letter-spacing: 3px;
-}
-
-.login.page .title,
-.login.page .usernameInput {
-    color: #fff;
-    font-weight: 100;
-}
-
-
-/* Chat page */
-
-.chat.page {
-    display: none;
-}
-
-
-/* Font */
-
-.messages {
-    font-size: 150%;
-}
-
-.inputMessage {
-    font-size: 100%;
-}
-
-.log {
-    color: gray;
-    font-size: 70%;
-    margin: 5px;
-    text-align: center;
-}
-
-
-/* Messages */
-
-.chatArea {
-    height: 100%;
-    padding-bottom: 60px;
-}
-
-.messages {
-    height: 100%;
-    margin: 0;
-    overflow-y: scroll;
-    padding: 10px 20px 10px 20px;
-}
-
-.message.typing .messageBody {
-    color: gray;
-}
-
-.username {
-    font-weight: 700;
-    overflow: hidden;
-    padding-right: 15px;
-    text-align: right;
-}
-
-
-/* Input */
-
-.inputMessage {
-    border: 10px solid #000;
-    bottom: 0;
-    height: 60px;
-    left: 0;
-    outline: none;
-    padding-left: 10px;
-    position: absolute;
-    right: 0;
-    width: 100%;
-}
-
-
-/* User list */
-
-.listUsers {
-    height: 100%;
-    width: 10em;
-    float: right;
-    background: transparent;
-    border-left: 1px solid #858585;
-    padding: 1em;
-}
-
-.listUsers .usersConnected {
-    padding: 0;
-    -webkit-animation: all 1.5s ease 0s infinite normal;
-    animation: all 1.5s ease 0s infinite normal;
-}
-
-.listUsers .usersConnected .fa-square {
-    color: green;
-    margin-right: 1em;
-}
-
-.listUsers .usersConnected li {
-    -webkit-animation: all 1.5s ease 0s infinite normal;
-    animation: all 1.5s ease-in 0s infinite normal;
-    z-index: 1000;
-}
-
-.listUsers .usersConnected .userConnected:hover {
-    -webkit-animation: all 1.5s ease 0s infinite normal;
-    animation: all 1.5s ease-in 0s infinite normal;
-    cursor: pointer;
-    transform: scale(1.1);
-    background: rgba(0, 0, 0, 0.18);
-}
-
-#msg_pv {
-    float: right;
-    font-style: italic;
-    font-size: 0.6em;
-    color: #ff1d00;
-}
+    .lv-title{
+        color: black;
+    }
+    .actions {
+        list-style: none;
+        padding: 0;
+        z-index: 2;
+        margin: 0;
+        }
+        .actions > li {
+        display: inline-block;
+        vertical-align: baseline;
+        }
+        .actions > li > a,
+        .actions > a {
+        width: 30px;
+        height: 30px;
+        line-height: 35px;
+        display: inline-block;
+        text-align: center;
+        position: relative;
+        }
+        .actions > li > a > i,
+        .actions > a > i {
+        transition: color;
+        transition-duration: 1300ms;
+        color: #adadad;
+        font-size: 20px;
+        }
+        .actions > li > a:hover > i,
+        .actions > a:hover > i {
+        color: #000;
+        }
+        .actions > li > a:before,
+        .actions > a:before {
+        left: 0;
+        top: 0;
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        transform: scale3d(0, 0, 0);
+        -o-transition: all;
+        transition: all;
+        transition-duration: 250ms;
+        backface-visibility: hidden;
+        background-color: rgba(0, 0, 0, 0.1);
+        z-index: 0;
+        border-radius: 50%;
+        opacity: 0;
+        filter: alpha(opacity=0);
+        }
+        .actions > li > a:hover:before,
+        .actions > a:hover:before {
+        transform: scale3d(1, 1, 1);
+        opacity: 1;
+        filter: alpha(opacity=100);
+        }
+        .actions > li.open > a > i,
+        .actions.open > a > i {
+        color: #000;
+        }
+        .actions > li.open > a:before,
+        .actions.open > a:before {
+        transform: scale(1);
+        opacity: 1;
+        filter: alpha(opacity=100);
+        }
+        .actions.actions-alt > li > a > i {
+        color: #fff;
+        }
+        .actions.actions-alt > li > a > i:hover {
+        color: #fff;
+        }
+        .actions.actions-alt > li.open > a > i {
+        color: #fff;
+        }
+        .actions.open {
+        z-index: 3;
+        }
+        .line-wrap {
+        width: 18px;
+        height: 12px;
+        transition: all;
+        transition-duration: 300ms;
+        margin: 10px 20px;
+        }
+        .line-wrap .line {
+        width: 18px;
+        height: 2px;
+        transition: all;
+        transition-duration: 300ms;
+        }
+        .line-wrap .line.center {
+        margin: 3px 0;
+        }
+        .open .line-wrap {
+        transform: rotate(180deg);
+        }
+        .open .line-wrap .line.top {
+        width: 12px;
+        transform: translateX(8px) translateY(1px) rotate(45deg);
+        }
+        .open .line-wrap .line.bottom {
+        width: 12px;
+        transform: translateX(8px) translateY(-1px) rotate(-45deg);
+        }
+        .listview{position:relative}.listview:not(.lv-lg):not(.lv-message) .lv-item{padding:12px 20px}@media (min-width: 480px){.listview.lv-lg .lv-item{padding:17px 35px 17px 25px}}@media (max-width: 767px){.listview.lv-lg .lv-item{padding:17px 35px 17px 20px}}.listview.lv-lg .lv-item:hover{background-color:#FFFFDB}.listview .lv-item{position:relative;display:block;-webkit-transition:background-color;-o-transition:background-color;transition:background-color;-webkit-transition-duration:300ms;transition-duration:300ms}.listview .lv-item .lv-small{font-size:12px;color:#A9A9A9;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;display:block;width:100%}.listview .lv-item .checkbox,.listview .lv-item.media{margin:0}.lvh-search-close:hover{background:#333}.lv-header-alt{position:relative;background:#f8f8f8;padding:15px}.lv-header-alt .lv-actions{z-index:3;float:right;margin-top:3px;position:relative}.lv-header-alt .lv-actions > li > a{margin:0 3px}.lvh-label{color:#818181;display:inline-block;margin:0;font-size:14px;font-weight:400;padding:0 6px;line-height:33px;vertical-align:middle}.lv-footer{display:block;text-align:center;padding:7px 10px 8px;border-top:1px solid #F0F0F0;line-height:100%;font-size:11px;margin-top:20px;color:#828282}.card{position:relative;background:#fff;box-shadow:0 1px 1px rgba(0,0,0,0.15);margin-bottom:30px}.#messages-main:before,#messages-main:after{content:" ";display:table}#messages-main:after{clear:both}#messages-main .ms-block{padding:23px 20px 0}#messages-main .ms-menu{position:absolute;left:0;top:0;background:#F8F8F8;border-right:1px solid #EEE;padding-bottom:50px;height:100%;width:240px;-webkit-transition:all;-o-transition:all;transition:all;-webkit-transition-duration:250ms;transition-duration:250ms}@media (max-width: 767px){#messages-main .ms-menu{height:calc(100% - 58px);-webkit-transform:translate3d(-240px,58px,0);transform:translate3d(-240px,58px,0);opacity:0;filter:alpha(opacity=0);z-index:1}#messages-main .ms-menu.toggled{-webkit-transform:translate3d(0,58px,0);transform:translate3d(0,58px,0);opacity:1;filter:alpha(opacity=100)}}#messages-main .ms-menu .lv-item.active{background:#fff}#messages-main .ms-menu .lv-item:not(.active):hover{background:#F2F2F2;cursor:pointer}@media (min-width: 768px){#messages-main .ms-body{padding-left:240px}}@media (max-width: 767px){#messages-main .ms-body{overflow:hidden}}#messages-main .ms-user:before,#messages-main .ms-user:after{content:" ";display:table}#messages-main .ms-user:after{clear:both}#messages-main .ms-user:before,#messages-main .ms-user:after{content:" ";display:table}#messages-main .ms-user:after{clear:both}#messages-main .ms-user > img{border-radius:50%;width:40px;float:left}#messages-main .ms-user > div{overflow:hidden;padding:7px 5px 7px 15px;font-size:11px}#messages-main #ms-compose{position:fixed;bottom:120px;z-index:1;right:30px;box-shadow:0 0 4px rgba(0,0,0,0.14),0 4px 8px rgba(0,0,0,0.28)}#ms-menu-trigger{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;float:left;margin:1px 0 0 -7px}@media (min-width: 768px){#ms-menu-trigger{display:none}}#ms-menu-trigger .line-wrap .line{background-color:#717171}.lv-message .lv-item{padding:20px}.lv-message .lv-item.right{text-align:right}.lv-message .lv-item.right .lv-avatar{margin-right:0;margin-left:15px}.lv-message .lv-item:not(.right) .ms-item{background-color:#f5f5f5;color:#7c7c7c;box-shadow: 0 1.5px .5px rgba(0,0,0,.13);}.lv-message .lv-item.right .ms-item{background:#ecf0f1;box-shadow: 0 1.5px .5px rgba(0,0,0,.13); color:#7c7c7c;}.lv-avatar{width:35px;height:35px;border-radius:50%;color:#FFF;text-align:center;line-height:34px;font-size:15px;margin-right:15px;padding:0!important;text-transform:uppercase}.lv-avatar > img{width:35px;height:35px;border-radius:50%;vertical-align:top}.ms-item{padding:13px 19px 15px;border-radius:2px;display:inline-block}@media (min-width: 768px){.ms-item{max-width:70%}}.ms-date{display:block;color:#B3B3B3;margin-top:7px; margin-left:3px;}.ms-date > i{font-size:14px;vertical-align:bottom;line-height:100%}.ms-reply{ background-color:#f5f5f5;position:relative;margin:0!important}.ms-reply textarea{width:94%; margin-left:-50px; resize:none;  border-style: none;border-color: Transparent;   overflow: auto;   font-size:15px; padding:10px;font-style:normal;height:45px;}.ms-reply button{position:absolute;top:0;right:0;border:0;height:100%;width:60px;font-size:25px;background:#F5F5F5;color:#999}.ms-reply button:hover{background:#f2f2f2; color:#7c7c7c}
+        textarea:focus {outline: none !important;border-color: #719ECE;}
+        .user-detail{ border:none !important; border-radius:0px; z-index:9999;}
+        #ms-scrollbar::-webkit-scrollbar-track
+        {
+        background-color:#CCCCCC;
+        }
+        #ms-scrollbar::-webkit-scrollbar
+        {
+        width: 7px;
+        background-color: #F5F5F5;
+        }
+        #ms-scrollbar::-webkit-scrollbar-thumb
+        {
+        background-color:#eeeeee;
+        }
+        .ms-new{box-shadow:0 2px 5px rgba(0,0,0,0.16),0 2px 10px rgba(0,0,0,0.12); background-color:#2196f3;}
