--- a/views/worldChat.html
+++ b/views/worldChat.html
@@ -1,20 +1,183 @@
-{% include 'templates/header.html' %}
-<ul class="pages">
-    <li class="chat page">
-        <div class="listUsers">
-            <ul class="usersConnected" id="uscon"></ul>
+{% include 'templates/header.html' %} {% include 'templates/nav.html' %}
+
+
+<!-- <div ng-controller="worldchat">
+    <ul id="messages">
+        <li ng-repeat="msg in messages" ng-cloak>
+            {[{ msg.username + ': ' + msg.message }]}
+            <span style="float: right;">{[{ msg.created_at }]}</span>
+        </li>
+    </ul>
+    <form action="#">
+        <input id="m" autocomplete="off" ng-model="message" my-enter="sendMsg();" />
+        <button type="button" ng-click="sendMsg();">Envoyer</button>
+    </form>
+</div> -->
+<div class="container-fluid" ng-controller="worldchat">
+    <div class="container ng-scope">
+        <div class="block-header">
+            <h2> </h2>
         </div>
-        <div class="chatArea">
-            <ul class="messages"></ul>
+        <div class="card m-b-0" id="messages-main" style="box-shadow:0 0 40px 1px #c9cccd;">
+            <div class="ms-menu" style="overflow:scroll; overflow-x: hidden;" id="ms-scrollbar">
+                <div class="ms-block">
+                    <div class="ms-user">
+                        <img src="./images/avatar.jpg" alt="">
+                        <h5 class="q-title" align="center">
+                    </div>
+                </div>
+                <h1 class="worldchat">Worldchat</h1>
+                <hr/>
+                <div class="listview lv-user m-t-20">
+                    <div class="lv-item media active">
+                        <div class="lv-avatar pull-left">
+                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTAkIGnyx2NN1I8V67WtFKGgd8spOYOoYvMBvGmd1FrQluCQaP1Rg" alt="">
+                        </div>
+                        <div class="media-body">
+                            <div class="lv-title">qsdqsdq</div>
+                            <div class="lv-small"> Connected </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="ms-body">
+                <div class="listview lv-message">
+                    <div class="lv-header-alt clearfix">
+                        <div id="ms-menu-trigger">
+                            <div class="line-wrap">
+                                <div class="line top"></div>
+                                <div class="line center"></div>
+                                <div class="line bottom"></div>
+                            </div>
+                        </div>
+                        <div class="lvh-label hidden-xs">
+                            <div class="lv-avatar pull-left">
+                                <img src="./images/bhai.jpg" alt="">
+                            </div>
+                            <span class="c-black">{[{ username }]}
+                                <span style=" margin-left:8px; position:absolute; margin-top:12px;width: 8px;height: 8px;line-height: 8px;    border-radius: 50%; background-color:#80d3ab;"></span>
+                            </span>
+                        </div>
+                        <ul class="lv-actions actions list-unstyled list-inline">
+                            <li>
+                                <a href="#">
+                                    <i class="fa fa-check"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa fa-clock-o"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a data-toggle="dropdown" href="#">
+                                    <i class="fa fa-list"></i>
+                                </a>
+                                <ul class="dropdown-menu user-detail" role="menu">
+                                    <li>
+                                        <a href="">Latest</a>
+                                    </li>
+                                    <li>
+                                        <a href="">Oldest</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a data-toggle="dropdown" href="#" data-toggle="tooltip" data-placement="left" title="Tooltip on left">
+                                    <span class="glyphicon glyphicon-trash"></span>
+                                </a>
+                                <ul class="dropdown-menu user-detail" role="menu">
+                                    <li>
+                                        <a href="">Delete Messages</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="lv-body" id="ms-scrollbar" style="overflow:scroll; overflow-x: hidden; height:520px;">
+                        <div class="lv-item media" ng-repeat="msg in messages" ng-cloak>
+                            <div class="lv-avatar pull-left">
+                                <img src="./images/bhai.jpg" alt="">
+                            </div>
+                            <div class="media-body">
+                                <div class="ms-item">
+                                    <span class="glyphicon glyphicon-triangle-left" style="color:#000000;"></span>
+                                    {[{ msg.username + ': ' + msg.message }]}
+                                </div>
+                                <small class="ms-date">
+                                    <span class="glyphicon glyphicon-time"></span>&nbsp; 05/10/2015 at 09:00</small>
+                            </div>
+                        </div>
+                        <div class="lv-item media right">
+                            <div class="lv-avatar pull-right">
+                                <img src="./images/avatar.jpg" alt="">
+                            </div>
+                            <div class="media-body">
+                                <div class="ms-item">
+                                    We started this site with clear mission that we want to deliver complete details knowledge of Programming to our audience.
+                                    We are sharing this knowledge in all areas that you can see in our site.
+                                </div>
+                                <small class="ms-date">
+                                    <span class="glyphicon glyphicon-time"></span>&nbsp; 05/10/2015 at 09:30</small>
+                            </div>
+                        </div>
+                        <div class="lv-item media">
+                            <div class="lv-avatar pull-left">
+                                <img src="./images/bhai.jpg" alt="">
+                            </div>
+                            <div class="media-body">
+                                <div class="ms-item">
+                                    It's gives the power to synthesis anything anywhere you want to. Its the ultimate tool to solve any problem. And we help
+                                    you excel in that by working with you.
+                                </div>
+                                <small class="ms-date">
+                                    <span class="glyphicon glyphicon-time"></span>&nbsp; 20/02/2015 at 09:33</small>
+                            </div>
+                        </div>
+                        <div class="lv-item media right">
+                            <div class="lv-avatar pull-right">
+                                <img src="./images/avatar.jpg" alt="">
+                            </div>
+                            <div class="media-body">
+                                <div class="ms-item">
+                                    The basic essence of life is to learn, explore and synthesis. We provide you with the tools to make your dreams come true.Our
+                                    website is totally for free and available 24/7 and does not consume your data packs and
+                                    works like a charm on the supersonic lovely internet.
+                                </div>
+                                <small class="ms-date">
+                                    <span class="glyphicon glyphicon-time"></span>&nbsp; 05/10/2015 at 10:10</small>
+                            </div>
+                        </div>
+                        <div class="lv-item media">
+                            <div class="lv-avatar pull-left">
+                                <img src="./images/bhai.jpg" alt="">
+                            </div>
+                            <div class="media-body">
+                                <div class="ms-item">
+                                    Acadnote a world class website is processing surveys for every student who wants to do something new and different in the
+                                    field of academics. so it is a right place for every student to share their opinions
+                                    about their present academics so this website can provide every single student requirements
+                                    and it is possible for us to do if every student explains about their academics requirements.
+                                    Last but not the least tell the needs and collect your study materials which we will
+                                    provide to you.
+                                </div>
+                                <small class="ms-date">
+                                    <span class="glyphicon glyphicon-time"></span>&nbsp; 05/10/2015 at 10:24</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
+                    <div class="lv-footer ms-reply">
+                        <textarea rows="10" placeholder="Write messages..."></textarea>
+                        <button class="">
+                            <span class="glyphicon glyphicon-send"></span>
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
-        <input class="inputMessage" placeholder="Type here..." />
-    </li>
-    <li class="login page">
-        <div class="form">
-            <h3 class="title">Votre username ?</h3>
-            <input class="usernameInput" type="text" maxlength="14" />
-        </div>
-    </li>
-</ul>
+    </div>
+</div>
 
 {% include 'templates/footer.html' %}
