--- a/views/index.html
+++ b/views/index.html
@@ -12,10 +12,16 @@
         </button>
         <!-- Content -->
         <div class="container">
-
+            <canvas id="c"></canvas>
+            <div class="container" id="welcome">
+                <div class="title-page">
+                    <h1>{{ message }}</h1>
+                </div>
+            </div>
         </div>
     </div>
     <!-- /#page-content-wrapper -->
 </div>
 <!-- /#wrapper -->
+
 {% include 'templates/footer.html' %}
