--- a/views/templates/footer.html
+++ b/views/templates/footer.html
@@ -1,25 +1,22 @@
+<!-- Directives -->
+<script src="js/angular/directives/scrollglue.js"></script>
+
 <script src="js/main.js"></script>
 <script src="js/users/loginUser.js"></script>
 <script src="js/users/signup.js"></script>
+<script src="js/users/profil.js"></script>
 
 
-
-<!-- BOOTSTRAP -->
-<script src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js'></script>
-
-<!-- Nav bar -->
-<script src="js/home/index.js"></script>
 
 <!-- socket.io -->
 <script src="/socket.io/socket.io.js"></script>
 <script src="js/worldchat/chat.js"></script>
 
 <!-- Clock -->
-
-<script src="js/home/clock.js"></script>
+<!-- <script src="js/home/clock.js"></script> -->
 
 <!-- Alert -->
-<script src="js/home/alert.js"></script>
+<!-- <script src="js/home/alert.js"></script> -->
 
 
 
