--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,7 @@
 /*           VARIABLES           */
 /*-------------------------------*/
 body {
+  overflow: hidden;
   font-family: 'Roboto';
   font-size: 2rem;
   color: white;
@@ -15,7 +16,7 @@ h1,h2,h3,p{
 body,
 html {
   height: 100%;
-  background-color: rgba(119, 1, 1, 0.836);
+  background-color: rgba(255, 255, 255, 0.836);
 }
 .nav .open > a {
   background-color: transparent;
@@ -75,7 +76,7 @@ html {
   margin: 0;
   padding: 0;
   position: absolute;
-  top: 0;
+  top: 1.8rem;
   width: 220px;
 }
 .sidebar-nav li {
@@ -101,16 +102,16 @@ html {
   color: #000000;
 }
 .sidebar-nav li:nth-child(2):before {
-  background-color: rgba(168, 5, 5, 0.575);
+  background-color: grey;
 }
 .sidebar-nav li:nth-child(3):before {
-  background-color: rgba(172, 10, 10, 0.829);
+  background-color: rgba(190, 75, 75, 0.603);
 }
 .sidebar-nav li:nth-child(4):before {
   background-color: #4e8d3b;
 }
 .sidebar-nav li:nth-child(5):before {
-  background-color: #8f4646;
+  background-color: rgba(172, 10, 10, 0.829);
 }
 .sidebar-nav li:nth-child(6):before {
   background-color: #a04f4f;
@@ -130,6 +131,8 @@ html {
   width: 100%;
 }
 .sidebar-nav li a {
+  position: relative;
+  top: 0;
   color: #0e0b0b;
   display: block;
   padding: 10px 15px 10px 30px;
