--- a/views/templates/header.html
+++ b/views/templates/header.html
@@ -17,22 +17,32 @@
     <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 
 
-
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/users/login.css">
+    <link rel="stylesheet" href="css/users/profil.css">
     <link rel="stylesheet" href="css/worldchat.css">
+    <link rel="stylesheet" href="css/users/signup.css">
 
-    <!-- <link href="http://fastlearning.in/controller/css/css_files/bootstrap.min.css" rel="stylesheet"> -->
-    <!-- <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet"> -->
-    <!-- <script type="text/javascript" src="http://fastlearning.in/controller/js//jquery-1.11.0.min"></script>
-    <script src="http://fastlearning.in/controller/js/bootstrap.min.js" type="text/javascript"></script> -->
+
+
+
 
     <!-- JQUERY -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <!-- AngularJS -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+
+    <script src='https://stackpath.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
+
+    <!-- Nav bar + Annimation -->
+    <script src="https://public.stewart.com/seth/js/prefixfree.min.js"></script>
+    <script src="js/home/index.js"></script>
+    <script src="js/home/adAccueil.js"></script>
+    <script src="js/home/accueil.js"></script>
+
+
 </head>
 
 <body ng-app="myApp">
