--- a/views/templates/nav.html
+++ b/views/templates/nav.html
@@ -1,19 +1,30 @@
 <div class="overlay"></div>
 <!-- Sidebar -->
 <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
+
     <ul class="nav sidebar-nav">
         <li class="sidebar-brand">
-            <a href="index.php">
-                Some try
-            </a>
+            <div class="form-profil">
+                <img class="img-user" src="{{image}}" alt="image">
+
+                <div class="infoUser">
+                    <div class="username">
+                        <p id="username">Bonjour {{username}}</p>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li>
+            <a href="/">
+                <i class="glyphicon glyphicon-pencil"></i> Home</a>
         </li>
         <li>
             <a href="/worldchat">
                 <i class="fa fa-comments"></i> World chat</a>
         </li>
         <li>
-            <a href="/Profil">
-                <i class="glyphicon glyphicon-pencil"></i> Profil</a>
+            <a href="/profil">
+                <i class="glyphicon glyphicon-user"></i> Profil</a>
         </li>
         <li>
             <a href="/logout">
