--- a/views/users/login.html
+++ b/views/users/login.html
@@ -1,28 +1,44 @@
 {% include 'templates/header.html' %}
 
 
-<div class="container login" ng-controller="loginUser">
-    {{message}}
-    <div class="form-group loginGroup">
-        <label for="exampleInputEmail1">Identifiant</label>
-        <input type="text" class="form-control" id="exampleInputEmail1" name="username" placeholder="Entrer votre email ou speudo"
-            ng-model="username" my-enter="loginUser()">
-    </div>
-    <div class="form-group loginGroup">
-        <label for="pass">Mot de passe</label>
-        <input type="password" class="form-control" id="pass" name="password" placeholder="Entrer votre mot de passe" ng-model="password"
-            my-enter="loginUser()">
-    </div>
-    <!-- <div class="form-check">
-            <label class="form-check-label">
-                <input class="form-check-input" type="checkbox"> Se souvenir de moi
-            </label>
-        </div> -->
-    <div class="signin">
-        <a href="/signup" class="signin"> Pas encore inscrit?</a>
-    </div>
-    <button type="submit" class="btn btn-success" ng-click="loginUser()">Connexion</button>
-    <!-- <p class="erreurMessage">Utilisateur inexistant/mot de passe incorrecte</p> -->
-</div>
+<div class="container" class="login">
+    <canvas id="c"></canvas>
+    <div class="container login" ng-controller="loginUser">
+        <p class="message-login">{{message}}</p>
 
-{% include 'templates/footer.html' %}
+        <div class="form-group loginGroup" style="margin-top: 10rem;">
+            <label for="exampleInputEmail1">Identifiant</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" name="username" placeholder="Entrez votre email ou speudo"
+                ng-model="username" my-enter="loginUser()">
+        </div>
+        <div class="form-group loginGroup">
+            <label for="pass">Mot de passe</label>
+            <input type="password" class="form-control" id="pass" name="password" placeholder="Entrez votre mot de passe" ng-model="password"
+                my-enter="loginUser()">
+        </div>
+        <!-- <div class="form-check">
+                        <label class="form-check-label">
+                            <input class="form-check-input" type="checkbox"> Se souvenir de moi
+                        </label>
+                    </div> -->
+        <div class="signin">
+            <a href="/signup" class="signin"> Pas encore inscrit?</a>
+        </div>
+        <button type="submit" class="btn btn-success" ng-click="loginUser()" onclick="info()">Connexion</button>
+        <!-- <p class="erreurMessage">Utilisateur inexistant/mot de passe incorrecte</p> -->
+    </div>
+    <!-- The actual snackbar -->
+    <div id="snackbar">Veuillez remplir tout les champs</div>
+</div>
+<script>
+    function info() {
+        // Get the snackbar DIV
+        var x = document.getElementById("snackbar");
+
+        // Add the "show" class to DIV
+        x.className = "show";
+
+        // After 3 seconds, remove the show class from DIV
+        setTimeout(function () { x.className = x.className.replace("show", ""); }, 3000);
+    }
+</script> {% include 'templates/footer.html' %}
