--- a/views/users/signup.html
+++ b/views/users/signup.html
@@ -1,21 +1,21 @@
 {% include 'templates/header.html' %}
 
-<div ng-controller="signup">
+<div ng-controller="signup" class="signup">
     <div class="form-group">
-        <label for="mail">Address email</label>
-        <input type="text" class="form-control" name="mail" id="mail" placeholder="Entrer votre email" ng-model="mail">
+        <label for="mail">Addresse email</label>
+        <input type="text" class="form-control" name="mail" id="mail" placeholder="Entrez votre email" ng-model="mail">
     </div>
     <div class="form-group">
         <label for="pseudo">Pseudo</label>
-        <input type="text" class="form-control" name="pseudo" id="pseudo" placeholder="Entrer votre pseudo" ng-model="username">
+        <input type="text" class="form-control" name="pseudo" id="pseudo" placeholder="Entrez votre pseudo" ng-model="username">
     </div>
     <div class="form-group">
         <label for="pass">Mot de passe</label>
-        <input type="password" class="form-control" name="pass" id="pass" placeholder="Entrer votre mot de passe" ng-model="password">
+        <input type="password" class="form-control" name="pass" id="pass" placeholder="Entrez votre mot de passe" ng-model="password">
     </div>
     <div class="form-group">
-        <label for="pass-verif">vérification mot de passe</label>
-        <input type="password" class="form-control" id="pass-verif" name="pass-verif" placeholder="Retaper votre Mot de passe" ng-model="passwordTest"> {[{ message }]}
+        <label for="pass-verif">Vérification</label>
+        <input type="password" class="form-control" id="pass-verif" name="pass-verif" placeholder="Retapez votre Mot de passe" ng-model="passwordTest"> {[{ message }]}
     </div>
     <button type="submit" class="btn btn-success" ng-click="signup()">Inscription</button>
 
