--- a/public/css/users/login.css
+++ b/public/css/users/login.css
@@ -29,7 +29,7 @@ form{
 .message-login{
     position: relative;
     font-size: 35px;
-    width: 150px;
+    width: 25rem;
     top: 3rem;
     margin-left: auto;
     margin-right: auto;
