--- a/views/templates/header.html
+++ b/views/templates/header.html
@@ -34,6 +34,7 @@
     <!-- AngularJS -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 
+    <!-- BOOTSTRAP -->
     <script src='https://stackpath.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
 
     <!-- Nav bar + Annimation -->
