--- a/views/users/login.html
+++ b/views/users/login.html
@@ -4,7 +4,7 @@
 <div class="container" class="login">
     <canvas id="c"></canvas>
     <div class="container login" ng-controller="loginUser">
-        <p class="message-login">{{message}}</p>
+        <p class="message-login">Connectez-vous</p>
 
         <div class="form-group loginGroup" style="margin-top: 10rem;">
             <label for="exampleInputEmail1">Identifiant</label>
