--- a/public/css/style.css
+++ b/public/css/style.css
@@ -102,10 +102,10 @@ html {
   color: #000000;
 }
 .sidebar-nav li:nth-child(2):before {
-  background-color: grey;
+  background-color: #8080805c;
 }
 .sidebar-nav li:nth-child(3):before {
-  background-color: rgba(190, 75, 75, 0.603);
+  background-color: #448aff;
 }
 .sidebar-nav li:nth-child(4):before {
   background-color: #4e8d3b;
