--- a/public/css/worldchat.css
+++ b/public/css/worldchat.css
@@ -1,9 +1,15 @@
 .worldchat{
     position: relative;
-    bottom: 3rem;
+    top: -1rem;
     text-align: center;
     color: #f8f8f8;
-    top: 2rem;
+    user-select: none;
+}
+
+.send{
+    position: relative;
+    top: -0.2rem;
+    right: 0.3rem;
 }
 
 .img-connected{
@@ -21,11 +27,16 @@
 .username-chat-left{
     position: relative;
     top: 0.4rem;
-    left: -6px;
+    left: 3rem;
 }
 
+#messages-main .ms-body{
+    height: 43rem;
+}
 .lv-title{
-color: black;
+    position: relative;
+    color: black;
+    left: 3rem;
 }
 .actions {
 list-style: none;
@@ -112,7 +123,7 @@ margin: 10px 20px;
 }
 .line-wrap .line {
 width: 18px;
-height: 2px;
+height: 0.3rem;
 transition: all;
 transition-duration: 300ms;
 }
@@ -126,13 +137,135 @@ transform: rotate(180deg);
 width: 12px;
 transform: translateX(8px) translateY(1px) rotate(45deg);
 }
+
 .open .line-wrap .line.bottom {
 width: 12px;
 transform: translateX(8px) translateY(-1px) rotate(-45deg);
 }
-.listview{position:relative}.listview:not(.lv-lg):not(.lv-message) .lv-item{padding:12px 20px}@media (min-width: 480px){.listview.lv-lg .lv-item{padding:17px 35px 17px 25px}}@media (max-width: 767px){.listview.lv-lg .lv-item{padding:17px 35px 17px 20px}}.listview.lv-lg .lv-item:hover{background-color:#FFFFDB}.listview .lv-item{position:relative;display:block;-webkit-transition:background-color;-o-transition:background-color;transition:background-color;-webkit-transition-duration:300ms;transition-duration:300ms}.listview .lv-item .lv-small{font-size:12px;color:#A9A9A9;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;display:block;width:100%}.listview .lv-item .checkbox,.listview .lv-item.media{margin:0}.lvh-search-close:hover{background:#333}.lv-header-alt{position:relative;background:#f8f8f8;padding:15px; height: 7rem;}.lv-header-alt .lv-actions{z-index:3;float:right;margin-top:3px;position:relative}.lv-header-alt .lv-actions > li > a{margin:0 3px}.lvh-label{position: relative; top: 0.5rem;color:#818181;display:inline-block;margin:0;font-size:14px;font-weight:400;padding:0 6px;line-height:33px;vertical-align:middle}.lv-footer{display:block;text-align:center;padding:7px 10px 8px;border-top:1px solid #F0F0F0;line-height:100%;font-size:11px;margin-top:20px;color:#828282}.card{position:relative;background:#fff;box-shadow:0 1px 1px rgba(0,0,0,0.15);margin-bottom:30px}.#messages-main:before,#messages-main:after{content:" ";display:table}#messages-main:after{clear:both}#messages-main .ms-block{padding:23px 20px 0}#messages-main .ms-menu{position:absolute;left:0;top:0;background:#F8F8F8;border-right:1px solid #EEE;padding-bottom:50px;height:100%;width:240px;-webkit-transition:all;-o-transition:all;transition:all;-webkit-transition-duration:250ms;transition-duration:250ms}@media (max-width: 767px){#messages-main .ms-menu{height:calc(100% - 58px);-webkit-transform:translate3d(-240px,58px,0);transform:translate3d(-240px,58px,0);opacity:0;filter:alpha(opacity=0);z-index:1}#messages-main .ms-menu.toggled{-webkit-transform:translate3d(0,58px,0);transform:translate3d(0,58px,0);opacity:1;filter:alpha(opacity=100)}}#messages-main .ms-menu .lv-item.active{background:#fff}#messages-main .ms-menu .lv-item:not(.active):hover{background:#F2F2F2;cursor:pointer}@media (min-width: 768px){#messages-main .ms-body{padding-left:240px}}@media (max-width: 767px){#messages-main .ms-body{overflow:hidden}}#messages-main .ms-user:before,#messages-main .ms-user:after{content:" ";display:table}#messages-main .ms-user:after{clear:both}#messages-main .ms-user:before,#messages-main .ms-user:after{content:" ";display:table}#messages-main .ms-user:after{clear:both}#messages-main .ms-user > img{border-radius:50%;width:40px;float:left}#messages-main .ms-user > div{overflow:hidden;padding:7px 5px 7px 15px;font-size:11px}#messages-main #ms-compose{position:fixed;bottom:120px;z-index:1;right:30px;box-shadow:0 0 4px rgba(0,0,0,0.14),0 4px 8px rgba(0,0,0,0.28)}#ms-menu-trigger{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;float:left;margin:1px 0 0 -7px}@media (min-width: 768px){#ms-menu-trigger{display:none}}#ms-menu-trigger .line-wrap .line{background-color:#717171}.lv-message .lv-item{padding:20px}.lv-message .lv-item.right{text-align:right}.lv-message .lv-item.right .lv-avatar{margin-right:0;margin-left:15px}.lv-message .lv-item:not(.right) .ms-item{background-color:#f5f5f5;color:#7c7c7c;box-shadow: 0 1.5px .5px rgba(0,0,0,.13);}.lv-message .lv-item.right .ms-item{background:#ecf0f1;box-shadow: 0 1.5px .5px rgba(0,0,0,.13); color:#7c7c7c;}.lv-avatar{width:35px;height:35px;border-radius:50%;color:#FFF;text-align:center;line-height:34px;font-size:15px;margin-right:15px;padding:0!important;text-transform:uppercase}.lv-avatar > img{width:35px;height:35px;border-radius:50%;vertical-align:top}.ms-item{padding:13px 19px 15px;border-radius:2px;display:inline-block}@media (min-width: 768px){.ms-item{max-width:70%}}.ms-date{display:block;color:#B3B3B3;margin-top:7px; margin-left:3px;}.ms-date > i{font-size:14px;vertical-align:bottom;line-height:100%}.ms-reply{ background-color:#f5f5f5;position:relative;margin:0!important}.ms-reply textarea{width:94%; margin-left:-50px; resize:none;  border-style: none;border-color: Transparent;   overflow: auto;   font-size:15px; padding:10px;font-style:normal;height:45px;}.ms-reply button{position:absolute;top:0;right:0;border:0;height:100%;width:60px;font-size:25px;background:#F5F5F5;color:#999}.ms-reply button:hover{background:#f2f2f2; color:#7c7c7c}
+
+.listview{position:relative}
+
+.listview:not(.lv-lg):not(.lv-message) .lv-item{padding:12px 20px}
+
+@media (min-width: 480px){.listview.lv-lg .lv-item{padding:17px 35px 17px 25px}}
+
+@media (max-width: 767px){.listview.lv-lg .lv-item{padding:17px 35px 17px 20px}}
+
+.listview.lv-lg .lv-item:hover{background-color:#FFFFDB}
+
+.listview .lv-item{position:relative;display:block;-webkit-transition:background-color;-o-transition:background-color;transition:background-color;-webkit-transition-duration:300ms;transition-duration:300ms}
+
+.listview .lv-item .lv-small{position: relative; left: 3rem;font-size:12px;color:#A9A9A9;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;display:block;width:100%}
+
+.listview .lv-item .checkbox,.listview .lv-item.media{margin:0}
+
+.lvh-search-close:hover{background:#333}
+
+.lv-header-alt{position:relative;background:#f8f8f8;padding:15px; height: 7rem;}
+
+.lv-header-alt .lv-actions{z-index:3;float:right;margin-top:3px;position:relative}
+
+.lv-header-alt .lv-actions > li > a{margin:0 3px}
+
+.lvh-label{position: relative; top: 0.5rem;color:#818181;display:inline-block;margin:0;font-size:14px;font-weight:400;padding:0 6px;line-height:33px;vertical-align:middle}
+
+.lv-footer{display:block;text-align:center;padding:7px 10px 8px;border-top:1px solid #F0F0F0;line-height:100%;font-size:11px;margin-top:20px;color:#828282}
+
+.card{position:relative;background:#fff;box-shadow:0 1px 1px rgba(0,0,0,0.15);margin-bottom:30px}
+
+/* .#messages-main:before,#messages-main:after{content:" ";display:table} */
+
+#messages-main:after{clear:both}
+
+#messages-main .ms-block{padding:23px 20px 0}
+
+#messages-main .ms-menu{position:absolute;left:0;top:0;background:#F8F8F8;border-right:1px solid #EEE;padding-bottom:50px;height:100%;width:240px;-webkit-transition:all;-o-transition:all;transition:all;-webkit-transition-duration:250ms;transition-duration:250ms}
+
+@media (max-width: 767px){#messages-main .ms-menu{height:calc(100% - 58px);-webkit-transform:translate3d(-240px,58px,0);transform:translate3d(-240px,58px,0);opacity:0;filter:alpha(opacity=0);z-index:1}
+
+#messages-main .ms-menu.toggled{-webkit-transform:translate3d(0,58px,0);transform:translate3d(0,58px,0);opacity:1;filter:alpha(opacity=100)}}
+
+#messages-main .ms-menu .lv-item.active{background:#fff}
+
+#messages-main .ms-menu .lv-item:not(.active):hover{background:#F2F2F2;cursor:pointer}
+
+@media (min-width: 768px){#messages-main .ms-body{padding-left:240px}}
+
+@media (max-width: 767px){#messages-main .ms-body{overflow:hidden}}
+
+#messages-main .ms-user:before,#messages-main .ms-user:after{content:" ";display:table}
+
+#messages-main .ms-user:after{clear:both}
+
+#messages-main .ms-user:before,#messages-main .ms-user:after{content:" ";display:table}
+
+#messages-main .ms-user:after{clear:both}
+
+#messages-main .ms-user > img{border-radius:50%;width:40px;float:left}
+
+#messages-main .ms-user > div{overflow:hidden;padding:7px 5px 7px 15px;font-size:11px}
+
+#messages-main #ms-compose{
+    position:fixed;
+    bottom:120px;
+    z-index:1;
+    right:30px;
+    box-shadow:0 0 4px rgba(0,0,0,0.14),0 4px 8px rgba(0,0,0,0.28)
+}
+
+#ms-menu-trigger{
+    -webkit-touch-callout:none;
+    -webkit-user-select:none;
+    -khtml-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none;
+    float:left;
+    margin:1px 0 0 -7px
+}
+
+@media (min-width: 768px){
+    #ms-menu-trigger{display:none}
+}
+
+#ms-menu-trigger .line-wrap .line{background-color:#717171}
+
+.lv-message .lv-item{padding:20px}
+
+.lv-message .lv-item.right{text-align:right}
+
+.lv-message .lv-item.right .lv-avatar{margin-right:0;margin-left:15px}
+
+.lv-message .lv-item:not(.right) .ms-item{background-color:#f5f5f5;color:#7c7c7c;box-shadow: 0 1.5px .5px rgba(0,0,0,.13);}
+
+.lv-message .lv-item.right .ms-item{background:#ecf0f1;box-shadow: 0 1.5px .5px rgba(0,0,0,.13); color:#7c7c7c;}
+
+.lv-avatar{width:35px;height:35px;border-radius:50%;color:#FFF;text-align:center;line-height:34px;font-size:15px;margin-right:-2.1rem;padding:0!important;text-transform:uppercase}
+
+.lv-avatar > img{width:35px;height:35px;border-radius:50%;vertical-align:top}
+
+.ms-item{padding:13px 19px 15px;border-radius:2px;display:inline-block}
+
+@media (min-width: 768px){
+    .ms-item{max-width:70%}
+}
+
+.ms-date{display:block;color:#B3B3B3;margin-top:7px; margin-left:3px; font-size: 1.5rem;}
+
+.ms-date > i{font-size:14px;vertical-align:bottom;line-height:100%}
+
+.ms-reply{ background-color:#f5f5f5;position:relative;margin:0!important}
+
+.ms-reply textarea{width:94%; margin-left:-34px; resize:none;  border-style: none;border-color: Transparent;   overflow: auto;   font-size:15px; padding:10px;font-style:normal;height:45px;}
+
+.ms-reply button{position:absolute;top:0;right:0;border:0;height:100%;width:60px;font-size:25px;background:#F5F5F5;color:#999}
+
+.ms-reply button:hover{background:#f2f2f2; color:#7c7c7c}
+
 textarea:focus {outline: none !important;border-color: #719ECE;}
+ 
 .user-detail{ border:none !important; border-radius:0px; z-index:9999;}
+
 #ms-scrollbar::-webkit-scrollbar-track
 {
 background-color:#CCCCCC;
@@ -151,7 +284,7 @@ background-color:#eeeeee;
 .username-message-left {
     position: absolute;
     color: black;
-    top: -2.6rem;
+    top: -1.6rem;
     margin-top: 3rem;
     left: 2.0rem;
 }
@@ -159,8 +292,8 @@ background-color:#eeeeee;
     position: absolute;
     color: black;
     margin-top: 1rem;
-    right: 2rem;
-    top: -0.5rem;
+    right: 2.1rem;
+    top: 0.3rem;
 }
 
 
@@ -170,6 +303,7 @@ background-color:#eeeeee;
 
 .media-body .ms-item {
     margin-top: 3rem;
+    font-size: 1.5rem;
 }
 
 .container-fluid {
@@ -178,6 +312,6 @@ background-color:#eeeeee;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
-    top: 9rem;
+    top: 5rem;
 }
 
