--- a/views/users/profil.html
+++ b/views/users/profil.html
@@ -13,10 +13,10 @@
         <!-- Content -->
         <div class="container">
             <canvas id="c"></canvas>
-            <div class="welcome">
-                <h1>{{ message }}</h1>
-            </div>
             <div class="profil">
+                <div class="welcome-profil">
+                    <h1 class="message-profil">{{ message }}</h1>
+                </div>
                 <img class="img-profil" src="{{ image }}" alt="image">
                 <div class="infoProfil">
                     <div class="mail-profil">
