--- a/views/worldChat.html
+++ b/views/worldChat.html
@@ -32,7 +32,7 @@
             <div class="container">
                 <div class="container-fluid" ng-controller="worldchat">
                     <div class="container ng-scope">
-                        <div class="card m-b-0" id="messages-main" style="box-shadow:0 0 40px 1px #c9cccd;">
+                        <div class="card m-b-0" id="messages-main" style="boxd-shadow:0 0 40px 1px #c9cccd;">
                             <div class="ms-menu" style="overflow:scroll; overflow-x: hidden;" id="ms-scrollbar">
                                 <div ng-repeat="user in users" ng-cloak>
                                     <div class="listview lv-user m-t-20">
@@ -67,7 +67,7 @@
                                             <img src="./images/bhai.jpg" alt="">
                                         </div> -->
                                             <span class="c-black userinfo" id="{{ id_user }}">{{username}}
-                                                <span style=" margin-left:8px; position:absolute; margin-top:12px;width: 8px;height: 8px;line-height: 8px;    border-radius: 50%; background-color:#80d3ab;"></span>
+                                                <span style="left: 5rem; position: absolute; top: 1.3rem; width: 8px; height: 8px; line-height: 8px; border-radius: 50%; background-color: #80d3ab;"></span>
                                             </span>
                                         </div>
                                         <ul class="lv-actions actions list-unstyled list-inline">
@@ -106,7 +106,7 @@
                                             </li>
                                         </ul>
                                     </div>
-                                    <div class="lv-body" id="ms-scrollbar" style="overflow:scroll; overflow-x: hidden; height:520px;" scroll-glue="glued">
+                                    <div class="lv-body" id="ms-scrollbar" style="overflow:scroll; overflow-x: hidden; height: 29.7rem;" scroll-glue="glued">
                                         <div ng-repeat="msg in messages | orderBy: '-id_message':true" ng-cloak>
                                             <div ng-if="!msg.myself">
                                                 <div class="lv-item media">
@@ -149,9 +149,9 @@
 
                                     <div class="clearfix"></div>
                                     <div class="lv-footer ms-reply">
-                                        <textarea rows="10" placeholder="Write messages..." my-enter="sendMsg(); glued = true;" ng-model="message"></textarea>
+                                        <textarea rows="10" placeholder="Ecrivez votre message..." my-enter="sendMsg(); glued = true;" ng-model="message"></textarea>
                                         <button class="" ng-click="sendMsg(); glued = true;">
-                                            <span class="glyphicon glyphicon-send"></span>
+                                            <span class="glyphicon glyphicon-send send"></span>
                                         </button>
                                     </div>
                                 </div>
