--- a/views/templates/header.html
+++ b/views/templates/header.html
@@ -32,13 +32,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <!-- AngularJS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.5/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.5/angular-animate.min.js"></script>
+
 
     <!-- BOOTSTRAP -->
     <script src='https://stackpath.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
 
     <!-- Nav bar + Annimation -->
-    <script src="https://public.stewart.com/seth/js/prefixfree.min.js"></script>
     <script src="js/home/index.js"></script>
     <script src="js/home/adAccueil.js"></script>
     <script src="js/home/accueil.js"></script>
