--- a/public/css/users/login.css
+++ b/public/css/users/login.css
@@ -13,16 +13,20 @@ form{
     text-align: center;
 }
 
+.loginGroup{
+    margin-top: 12rem;
+}
 .signin{
     color: white;
     text-align: center;
 }
+
 .btn{
     position: relative;
+    top: 3rem;
     display: block;
     margin: auto;
-    margin-top: 2rem;
-    width: 45rem;
+    margin-top: 1rem;
     width: 18rem;
 }
 
@@ -30,59 +34,47 @@ form{
     position: relative;
     font-size: 35px;
     width: 25rem;
-    top: 3rem;
     margin-left: auto;
     margin-right: auto;
-}
-
-/* The snackbar - position it at the bottom and in the middle of the screen */
-#snackbar {
-    visibility: hidden; /* Hidden by default. Visible on click */
-    min-width: 250px; /* Set a default minimum width */
-    margin-left: -125px; /* Divide value of min-width by 2 */
-    background-color: #333; /* Black background color */
-    color: #fff; /* White text color */
-    text-align: center; /* Centered text */
-    border-radius: 2px; /* Rounded borders */
-    padding: 16px; /* Padding */
-    position: fixed; /* Sit on top of the screen */
-    z-index: 1; /* Add a z-index if needed */
-    left: 50%; /* Center the snackbar */
-    bottom: 30px; /* 30px from the bottom */
-}
-
-/* Show the snackbar when clicking on a button (class added with JavaScript) */
-#snackbar.show {
-    visibility: visible; /* Show the snackbar */
-
-/* Add animation: Take 0.5 seconds to fade in and out the snackbar. 
-However, delay the fade out process for 2.5 seconds */
-    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-    animation: fadein 0.5s, fadeout 0.5s 2.5s;
-}
-
-/* Animations to fade the snackbar in and out */
-@-webkit-keyframes fadein {
-    from {bottom: 0; opacity: 0;} 
-    to {bottom: 30px; opacity: 1;}
-}
-
-@keyframes fadein {
-    from {bottom: 0; opacity: 0;}
-    to {bottom: 30px; opacity: 1;}
-}
-
-@-webkit-keyframes fadeout {
-    from {bottom: 30px; opacity: 1;} 
-    to {bottom: 0; opacity: 0;}
-}
-
-@keyframes fadeout {
-    from {bottom: 30px; opacity: 1;}
-    to {bottom: 0; opacity: 0;}
 }
 
 .login {
     position: relative;
     top: 9rem;
+}
+
+#failConnect{
+    position: relative;
+    bottom: 36rem;
+}
+
+#failConnect.ng-enter,#failConnect.ng-leave{
+    -webkit-transition: opacity ease-in-out 1s;
+    transition: opacity ease-in-out 1s;   
+}
+
+#failConnect.ng-enter,#failConnect.ng-leave.ng-leave-active{
+    opacity: 0;
+}
+
+#failConnect.ng-leave,#failConnect.ng-enter.ng-enter-active{
+    opacity: 1;
+}
+
+#incorrect{
+    position: relative;
+    bottom: 36rem;
+}
+
+#incorrect.ng-enter,#incorrect.ng-leave{
+    -webkit-transition: opacity ease-in-out 1s;
+    transition: opacity ease-in-out 1s;   
+}
+
+#incorrect.ng-enter,#incorrect.ng-leave.ng-leave-active{
+    opacity: 0;
+}
+
+#incorrect.ng-leave,#incorrect.ng-enter.ng-enter-active{
+    opacity: 1;
 }
