--- a/public/css/users/profil.css
+++ b/public/css/users/profil.css
@@ -78,7 +78,6 @@
 }
 
 .form-profil{
-
     height: 0rem;
     width: 21rem;
     position: absolute;
@@ -99,16 +98,15 @@
 .profil{
     position: relative;
     top: 16rem;
-    left: 37rem;
-    width: 41rem;
-    height: 57rem;
+    width: 100%;
+    height: 33rem;
     background-color: grey;
 }
 
 .infoProfil {
     position: relative;
-    top: 4rem;
-    left: 4rem;
+    top: -23rem;
+    left: 39rem;
     width: 33rem;
     height: 14rem;
 }
@@ -126,16 +124,18 @@
 
 
 .profil input{
+    color: black;
     position: relative;
-    bottom: -11rem;
-    left: -16.3rem;
+    bottom: -7rem;
+    left: -10.3rem;
 }
 
 
 
 
 .selectfile {
+    color: black;
     position: relative;
     top: 7rem;
-    right: 6.5rem;
+    left: -11rem;
 }
