--- a/views/templates/footer.html
+++ b/views/templates/footer.html
@@ -1,28 +1,14 @@
-<!-- Directives -->
-<script src="js/angular/directives/scrollglue.js"></script>
+    <!-- Directives -->
+    <script src="js/angular/directives/scrollglue.js"></script>
+    
+    <!-- socket.io -->
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="js/worldchat/chat.js"></script>
 
-<script src="js/main.js"></script>
-<script src="js/users/loginUser.js"></script>
-<script src="js/users/signup.js"></script>
-<script src="js/users/profil.js"></script>
-
-
-
-<!-- socket.io -->
-<script src="/socket.io/socket.io.js"></script>
-<script src="js/worldchat/chat.js"></script>
-
-<!-- Clock -->
-<!-- <script src="js/home/clock.js"></script> -->
-
-<!-- Alert -->
-<!-- <script src="js/home/alert.js"></script> -->
-
-
-
-
-
-
+    <!-- Perso -->
+    <script src="js/main.js"></script>
+    <script src="js/users/loginUser.js"></script>
+    <script src="js/users/signup.js"></script>
+    <script src="js/users/profil.js"></script>
 </body>
-
 </html>
