--- a/views/users/login.html
+++ b/views/users/login.html
@@ -5,40 +5,31 @@
     <canvas id="c"></canvas>
     <div class="container login" ng-controller="loginUser">
         <p class="message-login">Connectez-vous</p>
-
-        <div class="form-group loginGroup" style="margin-top: 10rem;">
-            <label for="exampleInputEmail1">Identifiant</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" name="username" placeholder="Entrez votre email ou speudo"
-                ng-model="username" my-enter="loginUser()">
-        </div>
         <div class="form-group loginGroup">
+            <label for="Email">Identifiant</label>
+            <input type="text" class="form-control" id="Email" name="username" placeholder="Entrez votre email ou speudo"
+            ng-model="username" my-enter="loginUser()">
+        </div>
+        <div class="form-group">
             <label for="pass">Mot de passe</label>
             <input type="password" class="form-control" id="pass" name="password" placeholder="Entrez votre mot de passe" ng-model="password"
                 my-enter="loginUser()">
         </div>
-        <!-- <div class="form-check">
-                        <label class="form-check-label">
-                            <input class="form-check-input" type="checkbox"> Se souvenir de moi
-                        </label>
-                    </div> -->
         <div class="signin">
             <a href="/signup" class="signin"> Pas encore inscrit?</a>
         </div>
-        <button type="submit" class="btn btn-success" ng-click="loginUser()" onclick="info()">Connexion</button>
-        <!-- <p class="erreurMessage">Utilisateur inexistant/mot de passe incorrecte</p> -->
+        <button type="submit" class="btn btn-success" ng-click="loginUser()">Connexion</button>
+          <div class="alert alert-danger" id="failConnect" ng-if="connect" ng-cloak>
+            <strong>Erreur !</strong> Tous les champs doivent être remplis.
+          </div>
+          <div class="alert alert-danger" id="incorrect" ng-if="incorrect" ng-cloak>
+            <strong>Erreur !</strong> Le nom d'utilisateur ou le mot de passe est incorrect.
+          </div>
     </div>
-    <!-- The actual snackbar -->
-    <div id="snackbar">Veuillez remplir tout les champs</div>
 </div>
+
 <script>
-    function info() {
-        // Get the snackbar DIV
-        var x = document.getElementById("snackbar");
+</script>
 
-        // Add the "show" class to DIV
-        x.className = "show";
 
-        // After 3 seconds, remove the show class from DIV
-        setTimeout(function () { x.className = x.className.replace("show", ""); }, 3000);
-    }
-</script> {% include 'templates/footer.html' %}
+{% include 'templates/footer.html' %}
