--- a/views/users/signup.html
+++ b/views/users/signup.html
@@ -1,24 +1,34 @@
 {% include 'templates/header.html' %}
 <div class="container">
     <canvas id="c"></canvas>
-    <div ng-controller="signup" class="signup">
-        <div class="form-group">
-            <label for="mail">Addresse email</label>
-            <input type="text" class="form-control" name="mail" id="mail" placeholder="Entrez votre email" ng-model="mail">
+    <div ng-controller="signup">
+        <div class="signup">
+            <div class="form-group">
+                <label for="mail">Addresse email</label>
+                <input type="text" class="form-control" name="mail" id="mail" placeholder="Entrez votre email" ng-model="mail">
+            </div>
+            <div class="form-group">
+                <label for="pseudo">Pseudo</label>
+                <input type="text" class="form-control" name="pseudo" id="pseudo" placeholder="Entrez votre pseudo" ng-model="username">
+            </div>
+            <div class="form-group">
+                <label for="pass">Mot de passe</label>
+                <input type="password" class="form-control" name="pass" id="pass" placeholder="Entrez votre mot de passe" ng-model="password">
+            </div>
+            <div class="form-group">
+                <label for="pass-verif">Vérification</label>
+                <input type="password" class="form-control" id="pass-verif" name="pass-verif" placeholder="Retapez votre Mot de passe" ng-model="passwordTest"> {[{ message }]}
+            </div>
+            <button type="submit" class="btn btn-success" ng-click="signup()">Inscription</button>
+            <button class="btn btn-danger" ng-click="logout()">Retour</button>
+
+            <div class="alert alert-danger" id="failSignup" ng-if="connect" ng-cloak>
+                <strong>Erreur !</strong> Tous les champs doivent être remplis.
+            </div>
+            <div class="alert alert-danger" id="notSame" ng-if="notSame" ng-cloak>
+                <strong>Erreur !</strong> Les mots de passe entrés ne sont pas identiques.
+            </div>
         </div>
-        <div class="form-group">
-            <label for="pseudo">Pseudo</label>
-            <input type="text" class="form-control" name="pseudo" id="pseudo" placeholder="Entrez votre pseudo" ng-model="username">
-        </div>
-        <div class="form-group">
-            <label for="pass">Mot de passe</label>
-            <input type="password" class="form-control" name="pass" id="pass" placeholder="Entrez votre mot de passe" ng-model="password">
-        </div>
-        <div class="form-group">
-            <label for="pass-verif">Vérification</label>
-            <input type="password" class="form-control" id="pass-verif" name="pass-verif" placeholder="Retapez votre Mot de passe" ng-model="passwordTest"> {[{ message }]}
-        </div>
-        <button type="submit" class="btn btn-success" ng-click="signup()">Inscription</button>
     </div>
 </div>
 
