--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,10 +1,10 @@
 
 
 canvas {
-    z-index: 0;
-    position: absolute;
-    top: 0px;
-    left: 0;
+       /* z-index: 0; */
+       position: fixed;
+       /* top: 0px; */
+       left: 0;
 }
 
 p {
