--- a/public/css/users/signup.css
+++ b/public/css/users/signup.css
@@ -12,39 +12,22 @@
     width: 18rem;
 }
 
-#failSignup{
+
+
+.alert-signup{
     position: relative;
     bottom: 58rem;
 }
 
-#failSignup.ng-enter,#failSignup.ng-leave{
+#alert.ng-enter,#alert.ng-leave{
     -webkit-transition: opacity ease-in-out 1s;
     transition: opacity ease-in-out 1s;   
 }
 
-#failSignup.ng-enter,#failSignup.ng-leave.ng-leave-active{
+#alert.ng-enter,#alert.ng-leave.ng-leave-active{
     opacity: 0;
 }
 
-#failSignup.ng-leave,#failSignup.ng-enter.ng-enter-active{
-    opacity: 1;
-}
-
-
-#notSame{
-    position: relative;
-    bottom: 58rem;
-}
-
-#notSame.ng-enter,#notSame.ng-leave{
-    -webkit-transition: opacity ease-in-out 1s;
-    transition: opacity ease-in-out 1s;   
-}
-
-#notSame.ng-enter,#notSame.ng-leave.ng-leave-active{
-    opacity: 0;
-}
-
-#notSame.ng-leave,#notSame.ng-enter.ng-enter-active{
+#alert.ng-leave,#alert.ng-enter.ng-enter-active{
     opacity: 1;
 }
