--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,9 +1,9 @@
 
 
 canvas {
-       /* z-index: 0; */
+       z-index: 0;
        position: fixed;
-       /* top: 0px; */
+       top: 0px;
        left: 0;
 }
 
