--- a/public/css/users/login.css
+++ b/public/css/users/login.css
@@ -43,44 +43,138 @@ form{
     top: 9rem;
 }
 
-#failConnect{
+.alert-login{
     position: relative;
-    bottom: 36rem;
+    bottom: 37rem;
 }
 
-#failConnect.ng-enter,#failConnect.ng-leave{
+
+#alert.ng-enter,#alert.ng-leave{
     -webkit-transition: opacity ease-in-out 1s;
     transition: opacity ease-in-out 1s;   
 }
 
-#failConnect.ng-enter,#failConnect.ng-leave.ng-leave-active{
+#alert.ng-enter,#alert.ng-leave.ng-leave-active{
     opacity: 0;
 }
 
-#failConnect.ng-leave,#failConnect.ng-enter.ng-enter-active{
-    opacity: 1;
-}
-
-#incorrect{
-    position: relative;
-    bottom: 36rem;
-}
-
-#incorrect.ng-enter,#incorrect.ng-leave{
-    -webkit-transition: opacity ease-in-out 1s;
-    transition: opacity ease-in-out 1s;   
-}
-
-#incorrect.ng-enter,#incorrect.ng-leave.ng-leave-active{
-    opacity: 0;
-}
-
-#incorrect.ng-leave,#incorrect.ng-enter.ng-enter-active{
+#alert.ng-leave,#alert.ng-enter.ng-enter-active{
     opacity: 1;
 }
 
 
-.alert {
-    position: relative;
-    top: 5rem;
-}
+/* Spinner */
+.wrap {
+    width: 100%;
+    position: absolute;
+    top: 28rem;
+    left: 2.7rem;
+  }
+  
+  .spinner-wrap {
+    margin: auto;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  
+  .spinner {
+    height: 100px;
+    width: 100px;
+    display: inline-block;
+    margin: -50px auto 0;
+    animation: spin 1s steps(12, end) infinite;
+  }
+  .spinner:first-child {
+    margin-right: 50px;
+  }
+  .spinner i {
+    height: 30px;
+    width: 6px;
+    margin-left: -3px;
+    display: block;
+    transition: height 1s;
+    position: absolute;
+    left: 50%;
+    transform-origin: center 50px;
+    background: #fff;
+    box-shadow: 0 0 3px rgba(255, 255, 255, 0.7);
+    border-radius: 3px;
+  }
+  .spinner:nth-child(2) i {
+    height: 6px;
+  }
+  .spinner:hover i {
+    height: 6px;
+  }
+  .spinner:hover:nth-child(2) i {
+    height: 30px;
+  }
+  
+  .spinner i:nth-child(1) {
+    opacity: 0.08;
+  }
+  
+  .spinner i:nth-child(2) {
+    transform: rotate(30deg);
+    opacity: 0.167;
+  }
+  
+  .spinner i:nth-child(3) {
+    transform: rotate(60deg);
+    opacity: 0.25;
+  }
+  
+  .spinner i:nth-child(4) {
+    transform: rotate(90deg);
+    opacity: 0.33;
+  }
+  
+  .spinner i:nth-child(5) {
+    transform: rotate(120deg);
+    opacity: 0.4167;
+  }
+  
+  .spinner i:nth-child(6) {
+    transform: rotate(150deg);
+    opacity: 0.5;
+  }
+  
+  .spinner i:nth-child(7) {
+    transform: rotate(180deg);
+    opacity: 0.583;
+  }
+  
+  .spinner i:nth-child(8) {
+    transform: rotate(210deg);
+    opacity: 0.67;
+  }
+  
+  .spinner i:nth-child(9) {
+    transform: rotate(240deg);
+    opacity: 0.75;
+  }
+  
+  .spinner i:nth-child(10) {
+    transform: rotate(270deg);
+    opacity: 0.833;
+  }
+  
+  .spinner i:nth-child(11) {
+    transform: rotate(300deg);
+    opacity: 0.9167;
+  }
+  
+  .spinner i:nth-child(12) {
+    transform: rotate(330deg);
+    opacity: 1;
+  }
+  
+  @keyframes spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
