Revert "Fix profil"
This reverts commit 589dc269d1d498b1c94d5838c4df981d7567f9a5.

--- a/public/css/users/profil.css
+++ b/public/css/users/profil.css
@@ -112,12 +112,13 @@
 }
 
 .img-profil {
-    position: relative;
-    left: 10.4rem;
-    top: -2rem;
-}
-
-.username-profil {
+    position: relative; 
+    left: 10.4rem; 
+    top: -2rem; 
+    width: 23%; 
+} 
+ 
+.username-profil { 
     position: relative;
     top: 4rem;  
 }
