--- a/views/users/signup.html
+++ b/views/users/signup.html
@@ -5,7 +5,8 @@
         <div class="signup">
             <div class="form-group">
                 <label for="mail">Addresse email</label>
-                <input type="text" class="form-control" name="mail" id="mail" placeholder="Entrez votre email" ng-model="mail">
+                <input type="text" class="form-control" name="mail" id="mail" placeholder="Entrez votre email"
+                    ng-model="mail">
             </div>
             <div class="form-group">
                 <label for="pseudo">Pseudo</label>
@@ -14,19 +15,19 @@
             </div>
             <div class="form-group">
                 <label for="pass">Mot de passe</label>
-                <input type="password" class="form-control" name="pass" id="pass" placeholder="Entrez votre mot de passe"
-                    ng-model="password">
+                <input type="password" class="form-control" name="pass" id="pass"
+                    placeholder="Entrez votre mot de passe" ng-model="password">
             </div>
             <div class="form-group">
                 <label for="pass-verif">Vérification</label>
-                <input type="password" class="form-control" id="pass-verif" name="pass-verif" placeholder="Retapez votre Mot de passe"
-                    ng-model="passwordTest"> {[{ message }]}
+                <input type="password" class="form-control" id="pass-verif" name="pass-verif"
+                    placeholder="Retapez votre Mot de passe" ng-model="passwordTest"> {[{ message }]}
             </div>
             <button type="submit" class="btn btn-success" ng-click="signup()">Inscription</button>
             <button class="btn btn-danger" ng-click="logout()">Retour</button>
 
             <div class="alert alert-warning alert-signup" id="alert" ng-if="connect" ng-cloak>
-                <strong>Erreur !</strong> Tous les champs doivent être remplis.
+                <strong>Attention !</strong> Tous les champs doivent être remplis.
             </div>
             <div class="alert alert-danger alert-signup" id="alert" ng-if="notSame" ng-cloak>
                 <strong>Erreur !</strong> Les mots de passe entrés ne sont pas identiques.
