--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,10 +1,8 @@
-
-
 canvas {
-       z-index: 0;
-       position: fixed;
-       top: 0px;
-       left: 0;
+    z-index: 0;
+    position: fixed;
+    top: 0px;
+    left: 0;
 }
 
 p {
@@ -51,7 +49,6 @@ p {
     align-items: center;
     margin-top: 10%;
 }
-
 
 .numbers-wrap {
     height: 180px;
@@ -105,6 +102,7 @@ p {
     width: 30%;
 }
 
+
 /* .alert {
     position: relative;
 }
@@ -120,6 +118,11 @@ p {
     margin-right: .3em;
 } */
 
-[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+[ng\:cloak],
+[ng-cloak],
+[data-ng-cloak],
+[x-ng-cloak],
+.ng-cloak,
+.x-ng-cloak {
     display: none !important;
 }
